Attempt to fix logging, added additional processing for files/folders using sender name, fix dupe lines on downloads.txt

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 SUBJECT_KEYWORDS: VIDEO,SERIES,PREMIUM
 OUTPUT_FOLDER: /downloads
 CRON_SCHEDULE: "*/10 * * * *" # <- every 10 minutes
+AUTO_MAKE_FOLDERS: true
